--- a/app/src/main/res/layout/activity_navegacion.xml
+++ b/app/src/main/res/layout/activity_navegacion.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:text="Ver mapa morro"
+        android:text="El morro - Mas info"
         app:layout_constraintBottom_toTopOf="@id/img_sena"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:text="Ver mapa sena"
+        android:text="SENA - Mas info"
         app:layout_constraintBottom_toTopOf="@id/img_parque"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:text="Ver mapa parque"
+        android:text="Parque Caldas - Mas info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
